samples/_failures_safe/1761424913_099a36_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c871b997.c: In function ‘main’:
./samples/SAFE/__tmp_c871b997.c:143:13: error: expected declaration or statement at end of input
  143 |             fprintf(stderr, "Invalid node indices\n");
      |             ^~~~~~~
./samples/SAFE/__tmp_c871b997.c:143:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c871b997.c:143:13: error: expected declaration or statement at end of input
